# homeWorks

./: .gitignore  CMakeLists.txt  README.md  coverage.sh  coverage_local.sh  docker_build.sh  format_style.sh  local_build.sh
.github/workflows/: homeWorks.yaml
docker/: Dockerfile  rebuild.bash
homeWork09_01/: lib.cpp  lib.hpp  main.cpp  tests.cpp
homeWork09_02/: lib.cpp  lib.hpp  main.cpp  tests.cpp
homeWork09_03/: lib.cpp  lib.hpp  main.cpp  tests.cpp
homeWork09_04/: lib.cpp  lib.hpp  main.cpp  tests.cpp
homeWork09_05/: lib.cpp  lib.hpp  main.cpp  tests.cpp
homeWork10_01/: main.cpp
homeWork11_01/: lib.cpp  lib.hpp  main.cpp  tests.cpp
homeWork11_02/: lib.cpp  lib.hpp  main.cpp  tests.cpp
homeWork11_03/: lib.cpp  lib.hpp  main.cpp  tests.cpp
homeWork12_01/: main.cpp
homeWork12_02/: lib.cpp  lib.hpp  main.cpp  tests.cpp
homeWork12_03/: lib.cpp  lib.hpp  main.cpp  tests.cpp
homeWork12_04/: lib.cpp  lib.hpp  main.cpp  tests.cpp
